# Calculator

./: .calculator.h.kate-swp  CMakeLists.txt  README.md  a.out  calculator  calculator.c  calculator.h  documentation.txt  makefile  test
include/: calculator.h
src/: calculator.c
